client/src/App.scss
@import "./index.scss";


body {
    margin: 0;
    background: var(--forth-color);
    font-family: "Ubuntu Mono";
    color: var(--forth-color);
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;

    #root{

        .App {
            width: 490px;
            height: 80vh;
            background-color: var(--first-color);
            padding: 2rem;
        }
    }
}

